# umaBot

./: .gitignore  AGENT.md.template  ARCHITECTURE.md  CLAUDE.md  MAKEFILE_GUIDE.md  Makefile  README.md  REFACTORING_SUMMARY.md  SECURITY.md  config.example.yaml  policy.rules.example.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
skill-template/: README.md  SKILL.md  pyproject.toml  requirements.txt
skill-template/scripts/: fetch_data.py  hello.py  hello.sh
skills/todo_assistant/: SKILL.md  requirements.txt
skills/todo_assistant/scripts/: common.py  create_todo.py  list_todos.py  update_todo.py
tests/: test_agent_team_registry.py  test_db_message_attachments.py  test_gateway_mcp_bridge.py  test_mcp_registry.py  test_shell_env.py  test_team_executor_completion_policy.py  test_worker_attachment_fallback.py  test_worker_auto_approve_workspace.py
tests/helpers/: fake_mcp_server.py  fake_mcp_server_http.py
umabot/: __init__.py  cli.py  gateway.py  intent.py  models.py  orchestrator.py  router.py  scheduler.py  worker.py  ws.py
umabot/agents/: __init__.py  agent.py  orchestrator.py  team_executor.py  team_registry.py
umabot/cli/: __init__.py  connections.py  control_panel_setup.py  daemon.py  doctor.py  google.py  main.py  onboard.py  panel.py  skills.py  tasks.py
umabot/config/: __init__.py  loader.py  schema.py
umabot/connectors/: __init__.py  base.py  gmail_connector.py  telegram_bot_connector.py  telegram_format.py  telegram_resilience.py  telegram_user_connector.py
umabot/control_panel/: __init__.py  manager.py
umabot/controlpanel/: __init__.py  __main__.py  connector.py  deps.py  events.py  server.py  store.py
umabot/controlpanel/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
umabot/controlpanel/routers/: __init__.py  admin.py  agent_teams.py  chat.py  config_router.py  connectors.py  dashboard.py  logs.py  policy.py  skills.py  tasks.py
umabot/controlpanel/static/: index.html
umabot/llm/: __init__.py  base.py  claude_client.py  gemini_client.py  openai_client.py  rate_limiter.py  scheduler.py
umabot/policy/: __init__.py  engine.py  rules.py
umabot/security/: __init__.py  masking.py  pii_filter.py  policy.py  ssrf.py
umabot/skills/: __init__.py  installer.py  loader.py  registry.py  runtime.py
umabot/storage/: __init__.py  db.py  queue.py
umabot/tasks/: __init__.py  parser.py  schedule.py
umabot/tools/: __init__.py  builtin.py  mcp_registry.py  registry.py  shell_env.py  skill_tools.py  unified_registry.py  workspace.py
umabot/tools/google/: __init__.py  auth.py  gcal.py  gmail.py  gtasks.py  register.py
(+37 files in other folders)
